Fix page heading size to fit better on mobile screens

--- a/src/css/banner.module.css
+++ b/src/css/banner.module.css
@@ -5,7 +5,7 @@
   text-shadow: 0 0 2px black;
 }
 .banner h1 {
-  font-size: 3.3rem;
+  font-size: 2.5rem;
   text-transform: uppercase;
   margin-bottom: 2rem;
   padding: 0 1rem;
@@ -15,6 +15,11 @@
   width: 85%;
   margin: 0 auto;
   margin-bottom: 2rem;
+}
+@media screen and (min-width: 484px) {
+  .banner h1 {
+    font-size: 3.3rem;
+  }
 }
 @media screen and (min-width: 768px) {
   .banner h1 {
